<resources>
    <string name="app_name">Euphonia</string>
    <string name="title_home">Create</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>
    <string name="home_title">Push micro and play some notes or open piano or select file</string>
    <string name="home_listen_title">Place your phone closer to piano and play some notes for generation</string>
    <string name="home_listen_processing_title">Recognizing of your melody…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_history">Save history automatically</string>
    <string name="settings_recording_audio">Save the recording in audio format</string>
    <string name="settings_recording_stave">Save the recording as a stave</string>
    <string name="settings_piano_size">Piano key size</string>
    <string name="settings_notes_amount">Notes in generation</string>
    <string name="settings_stave_on">Stave off/on</string>
    <string name="settings_save">Save</string>
    <string name="settings_default">Default</string>
    <string name="settings_vk">VK</string>
    <string name="btn_exit_creation_fragment">Exit</string>
    <string name="btn_remake_creation_fragment">Remake</string>
    <string name="btn_generate_creation_fragment">Generate</string>
    <string name="settings_saved">Settings saved</string>
    <string name="btn_choose_played">Played</string>
    <string name="btn_choose_generated">Generated</string>
    <string name="btn_generate_vk_music">How sound your profile</string>
    <string name="settings_reset_default">Reset to defaults</string>
    <integer name="com_vk_sdk_AppId">51925055</integer>
</resources>